--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ETGMod.Base"]
 	path = ETGMod.Base
-	url = git@github.com:ModTheGungeon/ETGMod.git
+	url = https://github.com/ModTheGungeon/ETGMod.git
