--- a/Assembly-CSharp.ExampleAPI.mm/Assembly-CSharp.ExampleAPI.mm.csproj
+++ b/Assembly-CSharp.ExampleAPI.mm/Assembly-CSharp.ExampleAPI.mm.csproj
@@ -33,12 +33,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\libs\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\ETGMod.Base\libs\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
-      <HintPath>..\libs\UnityEngine.dll</HintPath>
+      <HintPath>..\ETGMod.Base\libs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
